# os_ex3

./: Barrier.cpp  Barrier.h  CMakeLists.txt  Makefile  MapReduceClient.cpp  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README.md  SampleClient.cpp  backup.cpp  littleClient.cpp  main.cpp
Ex3 Files/barrierdemo/: Barrier.cpp
Ex3 Files/test_clients/: eurovisionClient.cpp
